// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`erp-order-input binaryFileId renders correctly if disabled 1`] = `
<div
  className="binary-input css-m27hme-BinaryUploadInput"
>
  <div
    className="css-1baflxz-BinaryUploadInput"
  >
    <div
      className="css-l0jg45-Icon"
      dangerouslySetInnerHTML={
        {
          "__html": {},
        }
      }
    />
    <div
      className="css-12ccz-Text"
    >
      binary_input__placeholder_label
    </div>
  </div>
  <div
    className="css-0"
    id="tooltip_42"
  >
    <button
      className="css-1cywa3f-Button"
      disabled={true}
      onClick={[Function]}
    >
      <div
        className="css-95j2hm-Button"
      >
        <div
          className="css-mj8vo1-Icon"
          dangerouslySetInnerHTML={
            {
              "__html": {},
            }
          }
        />
      </div>
    </button>
  </div>
  <div
    className="react-tooltip styles-module_tooltip__mnnfp styles-module_dark__xNqje css-10zyuev-Tooltip"
    role="tooltip"
    style={
      {
        "backgroundColor": "#2e3032",
        "zIndex": 1,
      }
    }
  >
    erp_dataset__file_upload_title
    <div
      className="react-tooltip-arrow styles-module_arrow__K0L3T"
      style={{}}
    />
  </div>
</div>
`;

exports[`erp-order-input binaryFileId renders correctly if enabled 1`] = `
<div
  className="binary-input css-m27hme-BinaryUploadInput"
>
  <div
    className="css-1baflxz-BinaryUploadInput"
  >
    <div
      className="css-l0jg45-Icon"
      dangerouslySetInnerHTML={
        {
          "__html": {},
        }
      }
    />
    <div
      className="css-12ccz-Text"
    >
      binary_input__placeholder_label
    </div>
  </div>
  <div
    className="css-0"
    id="tooltip_42"
  >
    <button
      className="css-1cywa3f-Button"
      disabled={false}
      onClick={[Function]}
    >
      <div
        className="css-95j2hm-Button"
      >
        <div
          className="css-mj8vo1-Icon"
          dangerouslySetInnerHTML={
            {
              "__html": {},
            }
          }
        />
      </div>
    </button>
  </div>
  <div
    className="react-tooltip styles-module_tooltip__mnnfp styles-module_dark__xNqje css-10zyuev-Tooltip"
    role="tooltip"
    style={
      {
        "backgroundColor": "#2e3032",
        "zIndex": 1,
      }
    }
  >
    erp_dataset__file_upload_title
    <div
      className="react-tooltip-arrow styles-module_arrow__K0L3T"
      style={{}}
    />
  </div>
</div>
`;

exports[`erp-order-input cashbackInCents renders correctly if disabled 1`] = `
<div
  className="css-17as3x0"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="css-1f5p64r"
  >
    <input
      className="css-16hptr6"
      defaultValue="common_number"
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
    />
  </div>
</div>
`;

exports[`erp-order-input cashbackInCents renders correctly if enabled 1`] = `
<div
  className="css-17as3x0"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="css-1f5p64r"
  >
    <input
      className="css-16hptr6"
      defaultValue="common_number"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
    />
  </div>
</div>
`;

exports[`erp-order-input customerId renders correctly if disabled 1`] = `
<div
  className="css-18fst3t"
>
  <div
    className="css-1ezojgn"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="css-oqraj9"
    >
      <input
        autoComplete="off"
        className="css-pkbj54"
        defaultValue=""
        disabled={true}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
      <div
        className="css-0"
        id="tooltip_42"
      >
        <div
          className="css-1wfdxtz-Icon"
          dangerouslySetInnerHTML={
            {
              "__html": {},
            }
          }
          onClick={[Function]}
        />
      </div>
      <div
        className="react-tooltip styles-module_tooltip__mnnfp styles-module_dark__xNqje css-10zyuev-Tooltip"
        role="tooltip"
        style={
          {
            "backgroundColor": "#2e3032",
            "zIndex": 1,
          }
        }
      >
        clipboard__copy
        <div
          className="react-tooltip-arrow styles-module_arrow__K0L3T"
          style={{}}
        />
      </div>
    </div>
  </div>
  <div
    className="results-list css-110siln"
    style={
      {
        "left": "0",
        "position": "fixed",
        "top": "0",
      }
    }
  />
</div>
`;

exports[`erp-order-input customerId renders correctly if enabled 1`] = `
<div
  className="css-18fst3t"
>
  <div
    className="css-1ezojgn"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="css-oqraj9"
    >
      <input
        autoComplete="off"
        className="css-pkbj54"
        defaultValue=""
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
  </div>
  <div
    className="results-list css-110siln"
    style={
      {
        "left": "0",
        "position": "fixed",
        "top": "0",
      }
    }
  />
</div>
`;

exports[`erp-order-input deliveryChargeInCents renders correctly if disabled 1`] = `
<div
  className="css-17as3x0"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="css-1f5p64r"
  >
    <input
      className="css-16hptr6"
      defaultValue="common_number"
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
    />
  </div>
</div>
`;

exports[`erp-order-input deliveryChargeInCents renders correctly if enabled 1`] = `
<div
  className="css-17as3x0"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="css-1f5p64r"
  >
    <input
      className="css-16hptr6"
      defaultValue="common_number"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
    />
  </div>
</div>
`;

exports[`erp-order-input deliveryDate renders correctly if disabled 1`] = `
<div
  className="css-myfy74"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div>
    Mocked Date Picker
  </div>
</div>
`;

exports[`erp-order-input deliveryDate renders correctly if enabled 1`] = `
<div
  className="css-1933itq"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div>
    Mocked Date Picker
  </div>
</div>
`;

exports[`erp-order-input deliveryStatus renders correctly if disabled 1`] = `
<div
  className="css-jbu9kz"
  data-testid="custom-select"
>
  <div
    className="css-0"
  />
  <div
    className="css-18vooac"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="custom-select"
    >
      MockedSelect
    </div>
  </div>
</div>
`;

exports[`erp-order-input deliveryStatus renders correctly if enabled 1`] = `
<div
  className="css-jbu9kz"
  data-testid="custom-select"
>
  <div
    className="css-0"
  />
  <div
    className="css-18vooac"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="custom-select"
    >
      MockedSelect
    </div>
  </div>
</div>
`;

exports[`erp-order-input discountInCents renders correctly if disabled 1`] = `
<div
  className="css-17as3x0"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="css-1f5p64r"
  >
    <input
      className="css-16hptr6"
      defaultValue="common_number"
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
    />
  </div>
</div>
`;

exports[`erp-order-input discountInCents renders correctly if enabled 1`] = `
<div
  className="css-17as3x0"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="css-1f5p64r"
  >
    <input
      className="css-16hptr6"
      defaultValue="common_number"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
    />
  </div>
</div>
`;

exports[`erp-order-input employeeId renders correctly if disabled 1`] = `
<div
  className="css-18fst3t"
>
  <div
    className="css-1ezojgn"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="css-oqraj9"
    >
      <input
        autoComplete="off"
        className="css-pkbj54"
        defaultValue=""
        disabled={true}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
      <div
        className="css-0"
        id="tooltip_42"
      >
        <div
          className="css-1wfdxtz-Icon"
          dangerouslySetInnerHTML={
            {
              "__html": {},
            }
          }
          onClick={[Function]}
        />
      </div>
      <div
        className="react-tooltip styles-module_tooltip__mnnfp styles-module_dark__xNqje css-10zyuev-Tooltip"
        role="tooltip"
        style={
          {
            "backgroundColor": "#2e3032",
            "zIndex": 1,
          }
        }
      >
        clipboard__copy
        <div
          className="react-tooltip-arrow styles-module_arrow__K0L3T"
          style={{}}
        />
      </div>
    </div>
  </div>
  <div
    className="results-list css-110siln"
    style={
      {
        "left": "0",
        "position": "fixed",
        "top": "0",
      }
    }
  />
</div>
`;

exports[`erp-order-input employeeId renders correctly if enabled 1`] = `
<div
  className="css-18fst3t"
>
  <div
    className="css-1ezojgn"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="css-oqraj9"
    >
      <input
        autoComplete="off"
        className="css-pkbj54"
        defaultValue=""
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
  </div>
  <div
    className="results-list css-110siln"
    style={
      {
        "left": "0",
        "position": "fixed",
        "top": "0",
      }
    }
  />
</div>
`;

exports[`erp-order-input id renders correctly if disabled 1`] = `
<div
  className="css-17as3x0"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="css-hsn270"
  >
    <input
      className="css-1hkmzl4"
      defaultValue=""
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="number"
    />
  </div>
</div>
`;

exports[`erp-order-input id renders correctly if enabled 1`] = `
<div
  className="css-17as3x0"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="css-hsn270"
  >
    <input
      className="css-1hkmzl4"
      defaultValue=""
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="number"
    />
  </div>
</div>
`;

exports[`erp-order-input note renders correctly if disabled 1`] = `
<div
  className="css-17as3x0"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="css-1f5p64r"
  >
    <input
      className="css-10yzrqy"
      defaultValue=""
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
    />
  </div>
</div>
`;

exports[`erp-order-input note renders correctly if enabled 1`] = `
<div
  className="css-17as3x0"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="css-1f5p64r"
  >
    <input
      className="css-10yzrqy"
      defaultValue=""
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
    />
  </div>
</div>
`;

exports[`erp-order-input sampleCompanyId renders correctly if disabled 1`] = `
<div
  className="css-17as3x0"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="css-1f5p64r"
  >
    <input
      className="css-10yzrqy"
      defaultValue=""
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
    />
  </div>
</div>
`;

exports[`erp-order-input sampleCompanyId renders correctly if enabled 1`] = `
<div
  className="css-17as3x0"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="css-1f5p64r"
  >
    <input
      className="css-10yzrqy"
      defaultValue=""
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
    />
  </div>
</div>
`;
